Fixed CSS issue with cutoff text on announcement in French

--- a/css/uav-vasp.css
+++ b/css/uav-vasp.css
@@ -400,7 +400,10 @@ textarea.fieldError,
     border-left: solid 10px #31708f;
     color: #000;
     background-color: #EBF2FA;
+}
 
+main .alert-floating.alert-info .container {
+    width: auto;
 }
 
 .alert-info,
